comments and css

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-    <link rel="stylesheet" href="/css/directory.css">
+    <link rel="stylesheet" href="/css/directory.css?v=8">
     <script defer src="/js/directory.js?v=1.0"></script>
 </head>
 <body>
@@ -36,6 +36,7 @@
         <ul class="ul-files">
             Loading..                
         </ul>
+        <div class="loading-circle"></div>
     </main>
 </body>
 </html>
