--- a/public/css/directory.css
+++ b/public/css/directory.css
@@ -1,11 +1,35 @@
+html
+{
+    height: 100%;
+}
+
+
 body
 {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    box-sizing: border-box;
     max-width: max(75vw, 600px);
+    margin: 0 auto;
+    padding: 20px 0;
 }
 
 .header-info{
     display: flex;
     justify-content: space-between;
+    flex: 0 1 auto; /* Don't grow, don't shrink, auto height */
+
+}
+
+h1
+{
+    margin-top: 0;
+}
+main
+{
+    flex: 1 1 auto;
+    position: relative;
 }
 
 .ul-files{
@@ -36,19 +60,16 @@ body
     font-size:small;
     overflow-wrap: break-word;
     width: 100px;
-
-
-    /* white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 100px;
-    display: block;
-    overflow: hidden; */
-
 }
 .file-icon
 {
+    max-width:100%;
+    max-height:75px;
+    height: auto;
+    width:auto;
+
     vertical-align: bottom;
-    height: 70px;
+    /* height: 75px; */
 }
 
 .path-segments
@@ -80,4 +101,58 @@ body
     transform: translate(-100%, -100%);
     width: 20px;
     filter: hue-rotate(300deg); 
+}
+.image-display
+{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+    box-sizing: border-box;
+}
+
+.image-display .image
+{
+    max-width: 100%;
+    max-height: 100%;
+    opacity: 1;
+}
+
+@keyframes rotate {
+    from {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to { 
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+.loading-circle
+{
+    position: absolute;
+    
+    border: solid 10px var(--text-bright);
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+
+
+    margin: 0;
+    width: 100px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    animation-name: rotate;
+    transition: all 0.5 ease-in;
+    animation-duration:         1.0s; 
+    animation-iteration-count:  infinite;
+    animation-timing-function: linear; 
+
 }
