--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IHSANS-PC</title>
+    <title><%= device_name %></title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <h1>Filte</h1>
+        <h1><%= device_name %></h1>
 
         <div class="header-info">
             <span class="path-segments">
