--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,15 @@
             Loading..                
         </ul>
         <div class="loading-circle"></div>
+        <div class="image-display">
+            <div class="image-settings">
+                <button class="close">Close</button>
+            </div>
+            <img class="image"> </img>
+            
+            <div class="left-arrow"></div>
+            <div class="right-arrow"></div>
+        </div>
     </main>
 </body>
 </html>
