--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,13 @@
             <div class="image-settings">
                 <button class="close">Close</button>
             </div>
-            <img class="image"> </img>
             
+            <div class="image-container">
+                <image class="image">
+                <image class="thumbnail">
+            </div>
+
+
             <div class="left-arrow"></div>
             <div class="right-arrow"></div>
         </div>
